<resources>
    <string name="app_name">Assembly Fun</string>

    <string name="main_menu_title">Assembly Fun</string>
    <string name="main_menu_button_solve_tasks">Solve tasks</string>
    <string name="main_menu_button_make_tasks">Make tasks</string>
    <string name="main_menu_button_settings">Settings</string>
    <string name="main_menu_logo_desc">Background image</string>
    <string name="main_menu_label_not_logged_in">Not logged in</string>

    <string name="title_activity_task_browser">Solve Tasks</string>
    <string name="title_activity_solve_options">Solve Tasks</string>
    <string name="title_unset">Unset title</string>
    <string name="title_activity_task_list">Task List</string>

    <string name="solve_option_online">Online Tasks</string>
    <string name="solve_option_local">Local Tasks</string>
    <string name="solve_option_solved">Solved Tasks</string>

    <string name="label_difficulty_tutorial">Tutorial</string>
    <string name="label_difficulty_very_easy">Very easy</string>
    <string name="label_difficulty_easy">Easy</string>
    <string name="label_difficulty_medium">Medium</string>
    <string name="label_difficulty_tough">Tough</string>
    <string name="label_difficulty_tougher">Tougher</string>
    <string name="label_difficulty_difficult">Difficult</string>
    <string name="label_difficulty_hard">Hard</string>
    <string name="label_difficulty_very_hard">Very hard</string>
    <string name="label_difficulty_insane">Insane</string>

    <string name="dialog_button_OK">OK</string>
    <string name="dialog_button_Cancel">Cancel</string>
    <string name="dialog_title_search_task_list">Enter search query:</string>

    <string name="help_solve_options_title">Help for solving options</string>
    <string name="help_solve_options_body">Choose what set of tasks to browse.\n
    Online Tasks is under construction.\n
    Local Tasks is where you should start. There you\'ll find all tasks saved locally. Some tutorial tasks are saved there\n
    Solved Tasks is a list of tasks you\'ve solved. Even tasks you don\'t have downloaded will be shown here.</string>
    <string name="help_task_screen_title">Help for tasks</string>
    <string name="help_task_screen_body">You are looking at the task screen for a task. There will be up to five buttons on this screen.
    Each button is next to an icon. \n\nThe first icon shows if the task is stored locally on your device. You have to store the task locally to solve it.
    You can use the button to download the task if the icon isn`\'t there, or to remove the task locally if you have it stored. The metadata for the task will still be around,
    so the task screen will still be present. You can\'t remove the task locally if it only exists on your device (see the next button/icon).
    To completely remove the task and it\'s metadata, chose \'delete all task data\' from the action bar menu.
    Please not that this will remove all your solutions to the task for good, and, unless the task is online, delete the task for ever.
    If you still have the task in your \'make tasks\' task list, you can publish the task again.
    \n\n
    If the task is online, you will see a button \'see online\' and a globe icon. If the task isn\'t online, you won\'t see either, and you can\'t remove the task from your device (without removing the metadata).
    \n\n
    If you have published the task yourself you will see a button saying \'add to online channels\' as well as an icon with an arrow pointing up.
    This button lets you put your task online, and add it to online channels you have posting rights in.
    \n\n
    The next button is sure to be on the screen. It lets you mark a task as a favourite or remove the star if it\'s already there. The icon next to the button is a star, and only visible if the task is a favourite of yours.
    When you mark a task as a favourite, you can filter to show favourites only in the task list. Tasks marked as favourite will not be deleted by the cleaning utils in the settings menu.
    \n\n
    The final button will say \'add solution\' if the task is downloaded locally. It lets you add a new solution to the task, and buts you into the solution editor.
    If the tasks isn\'t stored locally the button will be disabled. Solutions you\'ve already started on will be shown in the list bellow the records.
    \n\n
    The records that are kept track of are: speed, size and memory usage. Lower is better, and both your local record and the world record is shown. The record might change online, so be sure to hit refresh often.
    The refresh button will also upload your record if you beat the old world record. Your solution is uploaded and run on the server.
        On the server some extra secret tests are run to see that the program works for more than the numbers stored locally in the database (anti-cheating measure)
        However, only the tests you ran will be used when calculating the average speed and memory usage. Ratings will also be synced with online. When a solution fails it will say so in the solution list,
        but when the solution works for all the tests you will see how well each solution does in each of the record categories.
    \n
    Speed - the average instructions run before the program returns the correct answer. Less is better
    Size - the size of the program. Comments are ignored. Less is better
    Memory usage - The average of the highest memory location used to store values. Can often be 0 when only cache is needed to solve a task.
    </string>

    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_delete_all_task_data">Delete all task data</string>
    <string name="action_search">Search</string>
    <string name="action_sort_by_disabled">Sort by:</string>
    <string name="action_sort_by_name">Name</string>
    <string name="action_sort_by_date">Date</string>
    <string name="action_sort_by_author">Author</string>
    <string name="action_sort_by_rating">Rating</string>
    <string name="action_sort_by_difficulty">Difficulty</string>
    <string name="action_filter_disabled">Filter:</string>
    <string name="action_filter_local">Local only</string>
    <string name="action_filter_unsolved">Unsolved only</string>
    <string name="action_filter_self_published">Self published only</string>
    <string name="action_filter_favourites">Favourites only</string>

    <string name="label_task_list_no_filter">No Filter</string>
    <string name="label_task_list_filtering_by">Filtering by\u0020</string>
    <string name="label_task_list_filter_local">Local</string>
    <string name="label_task_list_filter_unsolved">Unsolved</string>
    <string name="label_task_list_filter_self_published">Self published</string>
    <string name="label_task_list_filter_favourites">Favourites</string>
    <string name="label_task_list_sorted_by">Sorted by\u0020</string>
    <string name="label_task_list_item_shown">Task Shown</string>
    <string name="label_task_list_items_shown">Tasks Shown</string>
    <string name="label_task_list_loading_items">Loading Items...</string>
    <string name="button_task_list_no_filter_desc">a cut icon for removing the filter</string>

    <string name="label_loading">Loading...</string>

    <string name="title_activity_task_screen">Task</string>
    <string name="label_task_screen_store_locally">Store locally</string>
    <string name="label_task_screen_remove_locally">Remove locally</string>
    <string name="label_task_screen_only_locally">Only exists locally</string>
    <string name="label_task_screen_see_online">See online</string>
    <string name="label_task_screen_add_to_online">Add to online channels</string>
    <string name="label_task_screen_favourite">Favourite</string>
    <string name="label_task_screen_un_favourite">Un-favourite</string>
    <string name="label_task_screen_add_solution">Add solution</string>
    <string name="label_task_screen_only_local_tasks_can_be_solved">Only local tasks can be solved</string>

    <string name="label_task_screen_no_records">No records stored</string>
    <string name="label_task_screen_records__">Records:</string>
    <string name="label_task_screen_records_you">You</string>
    <string name="label_task_screen_speed">Speed</string>
    <string name="label_task_screen_size">Size</string>
    <string name="label_task_screen_memuse">Memory usage</string>

    <string name="label_task_screen_solution_failed">Doesn\'t perform to specification</string>

    <string name="dialog_task_screen_are_you_sure">Are you sure?</string>
    <string name="dialog_task_screen_delete_task_data_body">This will delete all info about the task.
        All your solutions will be deleted, and unless the task is online, it will completely disappear forever.
        The task will disappear from the task lists. Your records also disappear unless you have the current world record. In that case the record is stored on the server.</string>

    <string name="label_month_0">Jan</string>
    <string name="label_month_1">Feb</string>
    <string name="label_month_2">March</string>
    <string name="label_month_3">April</string>
    <string name="label_month_4">May</string>
    <string name="label_month_5">June</string>
    <string name="label_month_6">July</string>
    <string name="label_month_7">Aug</string>
    <string name="label_month_8">Sep</string>
    <string name="label_month_9">Oct</string>
    <string name="label_month_10">Nov</string>
    <string name="label_month_11">Dec</string>

    <string name="title_activity_settings">Settings</string>
    <string name="switch_settings_keep_unlisted_tasks">Keep unlisted tasks</string>
    <string name="button_settings_delete_unused_rows">Clean unused database rows</string>
    <string name="button_settings_vacuum_database">Vacuum database</string>
    <string name="button_settings_delete_unlisted_tasks">Delete unlisted tasks</string>
    <string name="button_settings_delete_solved_only_tasks">Delete solved tasks only</string>

</resources>
