<RelativeLayout
    tools:context="me.havard.assemblyfun.TaskScreen"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/task_screen_task_rating_bar"
        android:layout_below="@+id/task_screen_task_date"
        android:layout_centerHorizontal="true"
        android:stepSize="0.1"
        android:numStars="5"
        android:rating="2.5" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/task_screen_task_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/task_screen_task_desc"
        android:layout_below="@+id/task_screen_task_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/task_screen_task_diff"
        android:layout_below="@+id/task_screen_task_desc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/task_screen_task_author"
        android:layout_below="@+id/task_screen_task_desc"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/task_screen_task_date"
        android:layout_alignTop="@+id/task_screen_task_diff"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/task_screen_task_rating_bar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/task_screen_button_list">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/task_screen_local_row">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_task_screen_store_locally"
                android:id="@+id/task_screen_local_button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/task_screen_local_icon" />

            <ImageView
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:id="@+id/task_screen_local_icon"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@mipmap/ic_local"
                android:layout_alignBottom="@+id/task_screen_local_button"
                android:layout_alignTop="@+id/task_screen_local_button"
                android:visibility="visible" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/task_screen_online_row"
            android:visibility="visible">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_task_screen_see_online"
                android:id="@+id/task_screen_online_button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/task_screen_online_icon" />

            <ImageView
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:id="@+id/task_screen_online_icon"
                android:src="@mipmap/ic_global"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/task_screen_online_button"
                android:layout_alignBottom="@+id/task_screen_online_button"
                android:visibility="visible" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/task_screen_self_published_row">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_task_screen_add_to_online"
                android:id="@+id/task_screen_publish_button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/task_screen_publish_icon" />

            <ImageView
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:id="@+id/task_screen_publish_icon"
                android:src="@mipmap/ic_published"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/task_screen_publish_button"
                android:layout_alignBottom="@+id/task_screen_publish_button"
                android:visibility="visible" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/task_screen_favourite_row">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_task_screen_favourite"
                android:id="@+id/task_screen_favourite_button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/task_screen_favourite_icon" />

            <ImageView
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:id="@+id/task_screen_favourite_icon"
                android:src="@mipmap/ic_favourite"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/task_screen_favourite_button"
                android:layout_alignBottom="@+id/task_screen_favourite_button"
                android:visibility="visible" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/task_screen_button_list"
            android:layout_centerHorizontal="true"
            android:id="@+id/task_screen_solve_row">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_task_screen_add_solution"
                android:id="@+id/task_screen_add_solution_button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/task_screen_solved_icon" />

            <ImageView
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:id="@+id/task_screen_solved_icon"
                android:src="@mipmap/ic_solved"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/task_screen_add_solution_button"
                android:layout_alignBottom="@+id/task_screen_add_solution_button"
                android:visibility="visible" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/task_screen_task_records"
        android:layout_below="@+id/task_screen_button_list"
        android:layout_alignParentLeft="true" />

</RelativeLayout>